<resources>
    <string name="app_name">Uptime</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="action_settings">Settings</string>
    <string name="uptime">Uptime</string>
    <string name="active_widgets">Active widgets</string>
    <string name="device_running_for">Device running for %s</string>
    <string name="restart">Restart Device</string>
    <string name="restart_device">Time has come to restart your device. Its important for its well-being!</string>
    <string name="notify_every">Notify every</string>
    <string name="apply">Apply</string>
    <string name="unset">Unset</string>
    <string name="schedule">Schedule</string>
    <string name="title">Title</string>
    <string name="smart_display">Smart time display</string>
    <string name="smart_time_details">Time will adapt smartly so as to be human readable</string>
    <string name="not_smart_time_details">The timer will always show HH:MM</string>
    <string name="widget_details">Note: After adding the widget resize according to your needs, so as the selected texts fit better.</string>
    <!-- Measure values -->
    <string name="days">days</string>
    <string name="months">months</string>
    <string name="hours">hours</string>
    <!-- End of com.madlymad.uptime.constants.Measure values -->
    <string name="restart_notification">Restart Notification</string>
    <string name="notify_error">Given value is not accepted.</string>
    <string name="no_scheduled_notifications">No scheduled restart notifications</string>
    <string name="scheduled_notification">Next scheduled notification is at %s</string>
    <string name="restart_now_error">You have delayed to restart your device it is suggested to do it now!</string>
    <string name="licenses">Open Source Licenses</string>
    <string name="action_about">About</string>
    <string name="version">Version</string>
    <string name="developer_options">Developer options</string>
    <string name="developer_options_summary">Set options for app development</string>
    <string name="email_logs">Share log file</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <!-- Device Info screen. Countdown for user taps to enable development settings -->
    <plurals name="show_dev_countdown">
        <item quantity="one">You are now %1$d step away from being a developer.</item>
        <item quantity="other">You are now %1$d steps away from being a developer.</item>
    </plurals>
    <!-- Device Info screen. Confirmation that developer settings are enabled -->
    <string name="show_dev_on">You are now a developer!</string>
    <!-- Device Info screen. Okay we get it, stop pressing, you already have it on -->
    <string name="show_dev_already">No need, you are already a developer.</string>
    <string name="credits">Credits</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="delete_logs">Clear log file</string>
    <string name="file_size">Size: %s</string>
    <string name="show_logs">Show log file</string>
    <string name="sure_delete_log">Are you sure you want to delete the log file?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enable_logging">Enable logging</string>
    <string name="agree">I Agree</string>
    <string name="crashlytics_opt_in">We Collect Data such as crash reports and analytics to make the app better for you.</string>
    <string name="ok">OK</string>
    <string name="provide_crash_data">Provide crash data</string>
    <string name="provide_crash_data_summary">Send crash data to improve application functionality</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied\n %s</string>
    <string name="deny_permission_message">If you reject permission, you can not use this service\n\nPlease turn on permissions at [Setting] &gt; [Permission]</string>
    <string name="notification_picker_text">When device is running for …</string>
    <string name="picker_dialog_title">Schedule Restart Notification</string>
    <string name="cancel">Cancel</string>
    <string name="set_value">Set value</string>
    <string name="set_metric">Set metric</string>

</resources>
