<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.madlymad.uptime.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/textUptime"
            style="@style/Text.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingBottom="8dp"
            android:text="@string/uptime" />

        <Chronometer
            android:id="@+id/chronometerUptime"
            style="@style/Text.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textUptime"
            android:gravity="end" />

        <TextView
            android:id="@+id/textNotificationSettings"
            style="@style/Text.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textUptime"
            android:paddingTop="16dp"
            android:text="@string/notification_settings" />

        <TextView
            android:id="@+id/textViewNotificationDetails"
            style="@style/Text.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textNotificationSettings"
            tools:text="Next notification is set for 3/4 14:54" />

        <TextView
            android:id="@+id/textNotification"
            style="@style/Text.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewNotificationDetails"
            android:labelFor="@+id/editTextDays"
            android:paddingTop="8dp"
            android:text="@string/notify_every" />

        <Spinner
            android:id="@+id/spinnerMeasure"
            style="@style/Button.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textNotification"
            android:layout_alignEnd="@+id/chronometerUptime"
            android:layout_alignTop="@+id/textNotification"
            android:entries="@array/time_measurements" />

        <EditText
            android:id="@+id/editTextDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textNotification"
            android:layout_toEndOf="@+id/textNotification"
            android:layout_toStartOf="@+id/spinnerMeasure"
            android:gravity="center"
            android:inputType="number" />

        <Button
            android:id="@+id/buttonApply"
            style="@style/Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/editTextDays"
            android:text="@string/apply" />

        <Button
            android:id="@+id/buttonUnset"
            style="@style/Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextDays"
            android:layout_toStartOf="@+id/buttonApply"
            android:text="@string/unset" />


        <TextView
            android:id="@+id/textViewNotificationAlert"
            style="@style/Text.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonApply"
            android:text="@string/restart_now_error"
            android:textColor="?attr/colorError" />

    </RelativeLayout>
</ScrollView>